# oracle

./: .cursor-rules  .gitignore  LARGE_FILE_FIXES.md  PROJECT_STRUCTURE.md  README.md  app.py  hello.py  install_ffmpeg.py  pyproject.toml  test_compression.py  test_compression_aggressive.py  test_setup.py
.cursor/rules/: CODE_TASKS.md.bak  README.md  code_tasks.mdc  general.mdc  implementation.mdc  project_structure.mdc  workflow.mdc
.cursor/rules/.md/: COMPRESSION_FEATURE.md  FINAL_SUMMARY.md  PROJECT_STRUCTURE.md
src/: config.py
src/database/: database.py  models.py
src/services/: ai_analysis.py  transcription.py
src/utils/: audio_compression.py
